[tool.poetry]
name = "pyfinding"
version = "0.1.0"
description = ""
authors = ["Luis Da Silva <luisdanield@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pyfinding", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
